# gtkapp

app1/: build.sh  main.c  new-style.css
app2/: build.sh  drawing.c  drawing.h  main.c
app3/: mainplot.py
app5/: CMakeLists.txt  hello.cc
hello/: CMakeLists.txt  build.sh  hello.c
